--- a/p8105_hw2_lh3109.html
+++ b/p8105_hw2_lh3109.html
@@ -172,6 +172,65 @@ pre code {
 
 <div id="problem-1" class="section level2">
 <h2>Problem 1</h2>
+<pre class="r"><code>#import Mr. Trash Wheel sheet from the excel file
+mr_trash_wheel_df = 
+  read_excel(
+    &quot;data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx&quot;, 
+    sheet = 1,
+    range = &quot;A2:N534&quot;
+  ) %&gt;% 
+  #clean variable names
+  janitor::clean_names() %&gt;% 
+  #omit rows that do not include dumpster-specific data
+  filter(!is.na(dumpster)) #%&gt;% 
+  #as.numeric(unlist(&quot;sports_balls&quot;)) %&gt;% 
+  #round the number of sports balls to the nearest integer
+  #round(&quot;sports_balls&quot;)
+
+#mr_trash_wheel_df
+
+#import precipitation 2019 data
+precip_2019_df = 
+  read_excel(
+    &quot;data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx&quot;, 
+    sheet = 6,
+    range = &quot;A2:B14&quot;
+    ) %&gt;% 
+  #clean variable names
+  janitor::clean_names() %&gt;% 
+  #add year variable
+  mutate(year = &quot;2019&quot;)
+
+
+#import precipitation 2018 data
+precip_2018_df = 
+  read_excel(
+    &quot;data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx&quot;, 
+    sheet = 7,
+    range = &quot;A2:B14&quot;
+    ) %&gt;% 
+  #clean variable names
+  janitor::clean_names() %&gt;% 
+  #add year variable
+  mutate(year = &quot;2018&quot;) 
+
+combined_data = left_join(precip_2019_df, precip_2018_df, by = &quot;month&quot;)
+combined_data</code></pre>
+<pre><code>## # A tibble: 12 × 5
+##    month total.x year.x total.y year.y
+##    &lt;dbl&gt;   &lt;dbl&gt; &lt;chr&gt;    &lt;dbl&gt; &lt;chr&gt; 
+##  1     1    3.1  2019      0.94 2018  
+##  2     2    3.64 2019      4.8  2018  
+##  3     3    4.47 2019      2.69 2018  
+##  4     4    1.46 2019      4.69 2018  
+##  5     5    3.58 2019      9.27 2018  
+##  6     6    0.42 2019      4.77 2018  
+##  7     7    3.85 2019     10.2  2018  
+##  8     8    2.39 2019      6.45 2018  
+##  9     9    0.16 2019     10.5  2018  
+## 10    10    5.45 2019      2.12 2018  
+## 11    11    1.86 2019      7.82 2018  
+## 12    12    3.57 2019      6.11 2018</code></pre>
 </div>
 <div id="problem-2" class="section level2">
 <h2>Problem 2</h2>
