--- a/p8105_hw2_lh3109.html
+++ b/p8105_hw2_lh3109.html
@@ -259,14 +259,21 @@ left_join(precip_2019_df, precip_2018_df, by = &quot;month&quot;)</code></pre>
 </div>
 <div id="problem-2" class="section level2">
 <h2>Problem 2</h2>
-<pre class="r"><code>#read pols_month data
+<pre class="r"><code>#import pols_month data
 pols_month_df = 
   read_csv(&quot;data/pols-month.csv&quot;) %&gt;% 
   #create better variable names
   janitor::clean_names() %&gt;% 
+  #separate month into three variables
   separate(mon, into = c(&quot;year&quot;, &quot;month&quot;, &quot;day&quot;)) %&gt;% 
+  #manipulate columns:
   mutate(month = month.name[as.numeric(month)],
          president = prez_gop + prez_dem,
+         ) %&gt;% 
+  #remove columns:
+  select(-day,
+         -prez_gop,
+         -prez_dem
          )</code></pre>
 <pre><code>## Rows: 822 Columns: 9</code></pre>
 <pre><code>## ── Column specification ────────────────────────────────────────────────────────
@@ -277,20 +284,92 @@ pols_month_df =
 ## ℹ Use `spec()` to retrieve the full column specification for this data.
 ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.</code></pre>
 <pre class="r"><code>pols_month_df</code></pre>
-<pre><code>## # A tibble: 822 × 12
-##    year  month     day   prez_gop gov_gop sen_gop rep_gop prez_dem gov_dem sen_dem
-##    &lt;chr&gt; &lt;chr&gt;     &lt;chr&gt;    &lt;dbl&gt;   &lt;dbl&gt;   &lt;dbl&gt;   &lt;dbl&gt;    &lt;dbl&gt;   &lt;dbl&gt;   &lt;dbl&gt;
-##  1 1947  January   15           0      23      51     253        1      23      45
-##  2 1947  February  15           0      23      51     253        1      23      45
-##  3 1947  March     15           0      23      51     253        1      23      45
-##  4 1947  April     15           0      23      51     253        1      23      45
-##  5 1947  May       15           0      23      51     253        1      23      45
-##  6 1947  June      15           0      23      51     253        1      23      45
-##  7 1947  July      15           0      23      51     253        1      23      45
-##  8 1947  August    15           0      23      51     253        1      23      45
-##  9 1947  September 15           0      23      51     253        1      23      45
-## 10 1947  October   15           0      23      51     253        1      23      45
-## # … with 812 more rows, and 2 more variables: rep_dem &lt;dbl&gt;, president &lt;dbl&gt;</code></pre>
+<pre><code>## # A tibble: 822 × 9
+##    year  month     gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem president
+##    &lt;chr&gt; &lt;chr&gt;       &lt;dbl&gt;   &lt;dbl&gt;   &lt;dbl&gt;   &lt;dbl&gt;   &lt;dbl&gt;   &lt;dbl&gt;     &lt;dbl&gt;
+##  1 1947  January        23      51     253      23      45     198         1
+##  2 1947  February       23      51     253      23      45     198         1
+##  3 1947  March          23      51     253      23      45     198         1
+##  4 1947  April          23      51     253      23      45     198         1
+##  5 1947  May            23      51     253      23      45     198         1
+##  6 1947  June           23      51     253      23      45     198         1
+##  7 1947  July           23      51     253      23      45     198         1
+##  8 1947  August         23      51     253      23      45     198         1
+##  9 1947  September      23      51     253      23      45     198         1
+## 10 1947  October        23      51     253      23      45     198         1
+## # … with 812 more rows</code></pre>
+<pre class="r"><code>#import snp data
+snp_df = 
+  read_csv(&quot;data/snp.csv&quot;) %&gt;% 
+  #create better variable names
+  janitor::clean_names() %&gt;% 
+  #separate date into three variables
+  separate(date, into = c(&quot;month&quot;, &quot;day&quot;, &quot;year&quot;)) %&gt;% 
+  #change the month variable
+  mutate(month = month.name[as.numeric(month)]) %&gt;% 
+  #remove day variable
+  select(-day) %&gt;% 
+  #make year variable become the heading variable
+  relocate(&quot;year&quot;)</code></pre>
+<pre><code>## Rows: 787 Columns: 2</code></pre>
+<pre><code>## ── Column specification ────────────────────────────────────────────────────────
+## Delimiter: &quot;,&quot;
+## chr (1): date
+## dbl (1): close</code></pre>
+<pre><code>## 
+## ℹ Use `spec()` to retrieve the full column specification for this data.
+## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.</code></pre>
+<pre class="r"><code>snp_df</code></pre>
+<pre><code>## # A tibble: 787 × 3
+##    year  month    close
+##    &lt;chr&gt; &lt;chr&gt;    &lt;dbl&gt;
+##  1 15    July     2080.
+##  2 15    June     2063.
+##  3 15    May      2107.
+##  4 15    April    2086.
+##  5 15    March    2068.
+##  6 15    February 2104.
+##  7 15    January  1995.
+##  8 14    December 2059.
+##  9 14    November 2068.
+## 10 14    October  2018.
+## # … with 777 more rows</code></pre>
+<pre class="r"><code>#import unemployment data
+unemployment_df = 
+  read_csv(&quot;data/unemployment.csv&quot;) %&gt;% 
+  #create better variable names
+  #janitor::clean_names() %&gt;% 
+  pivot_longer(
+    Jan:Dec,
+    names_to = &quot;month&quot;,
+    values_to = &quot;precentage&quot;
+  ) </code></pre>
+<pre><code>## Rows: 68 Columns: 13</code></pre>
+<pre><code>## ── Column specification ────────────────────────────────────────────────────────
+## Delimiter: &quot;,&quot;
+## dbl (13): Year, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec</code></pre>
+<pre><code>## 
+## ℹ Use `spec()` to retrieve the full column specification for this data.
+## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.</code></pre>
+<pre class="r"><code>  #mutate(month = 1:12)
+
+unemployment_df</code></pre>
+<pre><code>## # A tibble: 816 × 3
+##     Year month precentage
+##    &lt;dbl&gt; &lt;chr&gt;      &lt;dbl&gt;
+##  1  1948 Jan          3.4
+##  2  1948 Feb          3.8
+##  3  1948 Mar          4  
+##  4  1948 Apr          3.9
+##  5  1948 May          3.5
+##  6  1948 Jun          3.6
+##  7  1948 Jul          3.6
+##  8  1948 Aug          3.9
+##  9  1948 Sep          3.8
+## 10  1948 Oct          3.7
+## # … with 806 more rows</code></pre>
+<pre class="r"><code>#join_colsmonth_snp = left_join(pols_month_df, snp_df, by = c(&quot;year&quot;, &quot;month&quot;))
+#join_colsmonth_snp </code></pre>
 </div>
 <div id="problem-3" class="section level2">
 <h2>Problem 3</h2>
