--- a/p8105_hw2_lh3109.html
+++ b/p8105_hw2_lh3109.html
@@ -384,7 +384,8 @@ popular_male_df =
   #group the names by year
   group_by(year_of_birth) %&gt;% 
   #extract the rows with highest counts of a name
-  slice(which.max(count))
+  slice(which.max(count)) %&gt;% 
+  knitr::kable()
 
 
 nonhis_m_2016_df = 
@@ -442,16 +443,68 @@ olivia_df</code></pre>
 </tbody>
 </table>
 <pre class="r"><code>popular_male_df</code></pre>
-<pre><code>## # A tibble: 6 × 6
-## # Groups:   year_of_birth [6]
-##   year_of_birth gender ethnicity childs_first_name count  rank
-##           &lt;int&gt; &lt;chr&gt;  &lt;chr&gt;     &lt;chr&gt;             &lt;int&gt; &lt;int&gt;
-## 1          2011 MALE   HISPANIC  JAYDEN              426     1
-## 2          2012 MALE   HISPANIC  JAYDEN              364     1
-## 3          2013 MALE   HISPANIC  Jayden              352     1
-## 4          2014 MALE   HISPANIC  Liam                312     1
-## 5          2015 MALE   HISPANIC  Liam                356     1
-## 6          2016 MALE   HISPANIC  Liam                387     1</code></pre>
+<table>
+<thead>
+<tr class="header">
+<th align="right">year_of_birth</th>
+<th align="left">gender</th>
+<th align="left">ethnicity</th>
+<th align="left">childs_first_name</th>
+<th align="right">count</th>
+<th align="right">rank</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="right">2011</td>
+<td align="left">MALE</td>
+<td align="left">HISPANIC</td>
+<td align="left">JAYDEN</td>
+<td align="right">426</td>
+<td align="right">1</td>
+</tr>
+<tr class="even">
+<td align="right">2012</td>
+<td align="left">MALE</td>
+<td align="left">HISPANIC</td>
+<td align="left">JAYDEN</td>
+<td align="right">364</td>
+<td align="right">1</td>
+</tr>
+<tr class="odd">
+<td align="right">2013</td>
+<td align="left">MALE</td>
+<td align="left">HISPANIC</td>
+<td align="left">Jayden</td>
+<td align="right">352</td>
+<td align="right">1</td>
+</tr>
+<tr class="even">
+<td align="right">2014</td>
+<td align="left">MALE</td>
+<td align="left">HISPANIC</td>
+<td align="left">Liam</td>
+<td align="right">312</td>
+<td align="right">1</td>
+</tr>
+<tr class="odd">
+<td align="right">2015</td>
+<td align="left">MALE</td>
+<td align="left">HISPANIC</td>
+<td align="left">Liam</td>
+<td align="right">356</td>
+<td align="right">1</td>
+</tr>
+<tr class="even">
+<td align="right">2016</td>
+<td align="left">MALE</td>
+<td align="left">HISPANIC</td>
+<td align="left">Liam</td>
+<td align="right">387</td>
+<td align="right">1</td>
+</tr>
+</tbody>
+</table>
 <pre class="r"><code>nonhis_m_2016_df</code></pre>
 <pre><code>## # A tibble: 535 × 6
 ## # Groups:   childs_first_name [432]
